--- a/langswarm/mcp/tools/bigquery_vector_search/workflows.yaml
+++ b/langswarm/mcp/tools/bigquery_vector_search/workflows.yaml
@@ -73,6 +73,13 @@ workflows:
             Build the exact parameters needed for the BigQuery vector search tool call.
             Use the enhanced query if available, otherwise use extracted parameters directly.
           output:
+            to: clean_json
+
+        - id: clean_json
+          function: langswarm.core.utils.workflows.functions.format_as_json
+          args:
+            data: ${context.step_outputs.build_tool_parameters}
+          output:
             to: execute_search
 
         - id: execute_search
@@ -81,7 +88,7 @@ workflows:
             mcp_url: "local://bigquery_vector_search"
             payload:
               name: ${context.step_outputs.clean_intent}
-              arguments: ${context.step_outputs.build_tool_parameters}
+              arguments: ${context.step_outputs.clean_json}
           output:
             to:
               - condition:
@@ -105,7 +112,7 @@ workflows:
           input: |
             Error details: ${context.step_outputs.execute_search}
             User request: ${context.step_outputs.normalize_input}
-            Attempted operation: ${context.step_outputs.classify_intent.type}
+            Attempted operation: ${context.step_outputs.clean_intent}
             
             Provide helpful error guidance and suggest alternatives.
           output:
