--- a/requirements.in
+++ b/requirements.in
@@ -20,6 +20,7 @@ openai==1.79.0
 pinecone==6.0.2
 pydantic==2.11.4
 pytest==8.3.5
+python-dotenv==1.0.1
 python-telegram-bot==22.1
 PyYAML==6.0.2
 qdrant_client==1.14.2
