--- a/pytest.ini
+++ b/pytest.ini
@@ -1,17 +1,24 @@
 [tool:pytest]
+minversion = 6.0
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --tb=short --strict-markers --disable-warnings
-
-# Exclude problematic test files that are not actual tests
-norecursedirs = .git .tox dist build *.egg
+addopts = -ra -q --strict-markers --tb=short
+asyncio_mode = auto
+norecursedirs = .git .tox dist build *.egg archived
 
 # Test markers for categorization
 markers =
-    isolation_sensitive: Tests that may have isolation issues in large test suites
-    slow: Tests that take a long time to run
-    integration: Integration tests that test multiple components
-    unit: Unit tests that test individual components
-    requires_api: Tests that require external API access
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    requires_api_key: requires real API key (deselect with '-m "not requires_api_key"')
+    integration: integration tests that test multiple components
+    unit: unit tests that test individual components
+    e2e: end-to-end tests
+    isolation_sensitive: tests that may have isolation issues in large test suites
+
+# Filter warnings
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+    ignore::UserWarning:google
