--- a/.github/workflows/publish_agentmem.yml
+++ b/.github/workflows/publish_agentmem.yml
@@ -33,7 +33,8 @@ jobs:
       - name: ✅ Verify version matches pyproject.toml
         run: |
           cd agentmem
-          PYPROJECT_VERSION=$(python -c "import tomli; print(tomli.load(open('pyproject.toml', 'rb'))['project']['version'])" 2>/dev/null || grep -oP '(?<=version = ")[^"]+' pyproject.toml)
+          # Extract version from pyproject.toml (PEP 621 format)
+          PYPROJECT_VERSION=$(grep -m 1 '^version = ' pyproject.toml | cut -d'"' -f2)
           TAG_VERSION="${{ steps.get_version.outputs.version }}"
           
           echo "📦 Package version: $PYPROJECT_VERSION"
