--- a/agentmem/pyproject.toml
+++ b/agentmem/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "agentmem"
 version = "0.1.0"
 # agentmem-v0.1.0
+# Tag format: agentmem-v{version}
 description = "Enterprise-grade conversational memory for AI agents"
 readme = "README.md"
 authors = [{name = "Alexander Ekdahl", email = "alexander.ekdahl@gmail.com"}]
