--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,8 @@ keywords = ["LLM", "multi-agent", "langchain", "hugginface", "openai", "MCP", "a
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
 
-# AgentMem - Memory system (local development)
-# agentmem = {path = "./agentmem", develop = true}
-agentmem = "^0.1.1"  # PyPI version
+# Memory system
+langswarm-memory = "^0.1.0"
 
 # Core dependencies
 pyyaml = "^6.0.2"
